test/fixtures/public/fail/semantic/extra/overloads.jmm
/*  REASON:
    Allow function overloads
*/

class T {
    public static void main(String[] a) {
    }

    public int test1(){
        return 0;
    }

    public int test1(int x){
        return x;
    }
}
